Add CloudFoundry support and update configuration

--- a/.gitignore
+++ b/.gitignore
@@ -51,10 +51,16 @@ logs/
 
 # Environment variables
 .env
+.env.*
+!.env.example
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+
+# Dynatrace/CF specific
+dynatrace.json
+cf-credentials.json
 
 # MCP specific
 *.mcp
